corrected input values alignment

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -56,7 +56,7 @@ div {
     padding-top: 25px;
 }
 .sub-section {
-    padding-top: 10px;
+    padding-top: 5px;
 }
 html,
 body {
